--- a/main.html
+++ b/main.html
@@ -4,10 +4,47 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Car Insurance Registration Form</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+
+		<label for="name">Name</label>
+		<input type="text" id="name" required> 
+		
+		<label for="email">Email</label>
+		<input type="email" id="email" required>
+		
+		<label for="gender_male">Male</label>
+		<input type="radio" id="gender_male" name="gender" required>
+
+		
+		<label for="gender_female">Female</label>
+		<input type="radio" id="gender_female" name="gender" required>
+
+		<label for="cars">Car Brands</label>
+		<select id="cars">
+			<option>BMW</option>
+			<option>Audi</option>
+			<option>Mercedez</option>
+		</select>
+		
+		<label for="carage">Car Age</label>
+		<input type="number" id="carage" required>
+		
+		<label for="dop">Date of Purchase (dop)</label>
+		<input type="date" id="dop" required>
+		
+		<label for="password">Password</label>
+		<input type="password" id="password" required>
+
+		<button type="submit">Submit</button>
+
+
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
